--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,5 @@
 interfaces:
-  # app: ${ components['examples/cuttlefish'].interfaces.app.url }
+  web: ${ components['examples/cuttlefish'].interfaces.web.url }
 
 components:
   examples/cuttlefish: file:./
