fixing container ref

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
       - postfix
 
   postfix:
-    image: juanluisbaptiste/postfix.Dockerfile
+    image: juanluisbaptiste/postfix
     environment:
       - SMTP_SERVER=mailcatcher
       - SMTP_PORT=1025
